<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:scrollbars="vertical"
    >


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/player_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/options_label"
            android:text="@string/select_marker"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"/>


            <RadioButton
                android:id="@+id/o_marker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:button="@null"
                android:layout_below="@id/options_label"
                android:background="@drawable/black_circle"
                android:layout_centerHorizontal="true"/>

            <RadioButton
                android:id="@+id/x_marker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/o_marker"
                android:layout_alignLeft="@id/o_marker"
                android:button="@null"
                android:background="@drawable/black_cross"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/options_dif"
            android:text="@string/select_difficulty"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/x_marker"
            android:layout_centerHorizontal="true"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/difficulty_radio_group"
            android:layout_below="@+id/options_dif"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <RadioButton
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/easy"/>

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/hard"
                />
        </RadioGroup>

</RelativeLayout>
</ScrollView>