<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.morpion.MainMenuActivity"
    android:background="@android:color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:textSize="80sp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/one_player_label"
        android:textSize="50sp"
        android:text="@string/one_player"
        android:textColor="@color/colorAccent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one_player_label"
        android:layout_centerHorizontal="true"
        android:id="@+id/two_players_label"
        android:textSize="50sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/two_players"
        />

</RelativeLayout>
